--- a/.github/workflows/azure-functions-app-prod-nodejs.yml
+++ b/.github/workflows/azure-functions-app-prod-nodejs.yml
@@ -58,7 +58,7 @@ jobs:
         popd
 
     - name: 'Run Azure Functions Action'
-      uses: Azure/login@v1
+      uses: Azure/functions-action@v1
       id: fa
       with:
         app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
