--- a/.github/workflows/azure-functions-app-prod-nodejs.yml
+++ b/.github/workflows/azure-functions-app-prod-nodejs.yml
@@ -1,4 +1,4 @@
-s# This workflow will build a Node.js project and deploy it to an Azure Functions App on Windows or Linux when a commit is pushed to your default branch.
+# This workflow will build a Node.js project and deploy it to an Azure Functions App on Windows or Linux when a commit is pushed to your default branch.
 #
 # This workflow assumes you have already created the target Azure Functions app.
 # For instructions see:
