--- a/.github/workflows/azure-webapps-prod-node.yml
+++ b/.github/workflows/azure-webapps-prod-node.yml
@@ -23,7 +23,7 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_WEBAPP_NAME: cicd-m1-jcail-front-dev    # set this to your application's name
+  AZURE_WEBAPP_NAME: cicd-m1-jcail-front-prod    # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '20.x'                # set this to the node version to use
 
