--- a/.github/workflows/azure-webapps-preprod-node.yml
+++ b/.github/workflows/azure-webapps-preprod-node.yml
@@ -19,7 +19,7 @@
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "release" ]
   workflow_dispatch:
 
 env:
@@ -70,9 +70,9 @@ jobs:
         name: node-app
 
     - name: 'Deploy to Azure WebApp'
-      id: deploy-to-webapp
-      uses: azure/webapps-deploy@v2
+      uses: azure/static-web-apps-deploy@v1
       with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_PREPROD }}
-        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        action: "upload"
+        azure_static_web_apps_api_token: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_PROD }}
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        app_location: "/"
