--- a/.github/workflows/azure-webapps-dev-node.yml
+++ b/.github/workflows/azure-webapps-dev-node.yml
@@ -23,8 +23,6 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_WEBAPP_NAME: cicd-m1-jcail-front-dev    # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '20.x'                # set this to the node version to use
 
 permissions:
@@ -76,3 +74,4 @@ jobs:
         azure_static_web_apps_api_token: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_PROD }}
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         app_location: "/"
+        output_location: "dist"
