--- a/.github/workflows/azure-webapps-prod-node.yml
+++ b/.github/workflows/azure-webapps-prod-node.yml
@@ -32,47 +32,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ env.NODE_VERSION }}
-        cache: 'npm'
-
-    - name: npm install, build, and test
-      run: |
-        npm install
-        npm run build --if-present
-        npm run test --if-present
-
-    - name: Upload artifact for deployment job
-      uses: actions/upload-artifact@v3
-      with:
-        name: node-app
-        path: .
-
-  deploy:
-    permissions:
-      contents: none
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Development'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-    - name: Download artifact from build job
-      uses: actions/download-artifact@v3
-      with:
-        name: node-app
+    - uses: actions/checkout@v3
 
     - name: 'Deploy to Azure WebApp'
-      id: deploy-to-webapp
+      id: deploy-to-static-webapp
       uses: azure/static-web-apps-deploy@v1
       with:
-        action: "upload"
         azure_static_web_apps_api_token: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_PROD }}
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        app_location: "/"
-        output_location: "dist"
