--- a/.github/workflows/azure-webapps-dev-node.yml
+++ b/.github/workflows/azure-webapps-dev-node.yml
@@ -19,22 +19,20 @@
 
 on:
   push:
-    branches: [ "dev" ]
-  workflow_dispatch:
-
-env:
-  NODE_VERSION: '20.x'                # set this to the node version to use
-
-permissions:
-  contents: read
+    branches: 
+      - dev
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+      with:
+        submodules: true
+        lfs: false
 
     - name: 'Deploy to Azure WebApp'
       uses: Azure/static-web-apps-deploy@v1
       with:
         azure_static_web_apps_api_token: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_DEV }}
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
