--- a/.github/workflows/azure-webapps-preprod-node.yml
+++ b/.github/workflows/azure-webapps-preprod-node.yml
@@ -16,4 +16,6 @@ jobs:
       uses: azure/static-web-apps-deploy@v1
       with:
         azure_static_web_apps_api_token: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_PREPROD }}
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
         action: "upload"
+        app_location: "/"
