--- a/.github/workflows/azure-webapps-preprod-node.yml
+++ b/.github/workflows/azure-webapps-preprod-node.yml
@@ -24,6 +24,9 @@ jobs:
     - name: Build project
       run: npm run build
 
+    - name: Verify build output
+      run: ls -la build
+
     - name: 'Deploy to Azure WebApp'
       uses: azure/static-web-apps-deploy@v1
       with:
