--- a/.github/workflows/azure-webapps-prod-node.yml
+++ b/.github/workflows/azure-webapps-prod-node.yml
@@ -33,4 +33,4 @@ jobs:
       with:
         app-name: ${{ env.APP_NAME }}
         package: build.zip
-        azure_static_web_apps_api_token: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_PROD }}
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_PROD }}
