--- a/.github/workflows/azure-webapps-prod-node.yml
+++ b/.github/workflows/azure-webapps-prod-node.yml
@@ -26,7 +26,7 @@ jobs:
       run: npm run build
 
     - name: Zip build folder
-      run: zip -r build.zip dist
+      run: zip -r build.zip dist/*
 
     - name: 'Deploy to Azure WebApp'
       uses: Azure/webapps-deploy@v1
